--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,8 @@
+application.args=a.txt
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Joel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+work.dir=D:\\ADS\\Huffman-Encoding\\src
